static/css/styles.css
/* General Formatting*/

@font-face {
    font-family: 'Hermit';
    src: url('fonts/Hermit-Regular.woff') format('woff');
         url('fonts/Hermit-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: white }
}

body {
    overflow-x: hidden;
    margin: 0;
    height: 100%;
    padding-bottom: 0px;
    background-color: rgba(11,11,12,1);
}

h1, h2, h3, h4 {
    font-family: 'Hermit', Helvetica, Arial, sans-serif;
    font-size: 56px;
    line-height: 80px;
    text-shadow: 1px 1px 1px grey;
    color: white;
}

p, a, li, tr, td, span, noscript, figcaption {
    font-family: 'Hermit', Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 25px;
    color: white;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
    width: 100vw;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

::-webkit-scrollbar {
    display: none;
}

.centered {
    width: 100vw;
    max-width: 100%;
    height: 100vh;

}

.top-fade {
    background: linear-gradient(rgba(11,11,12,1) 0%, rgba(11,11,12,0.9) 30%, rgba(0,0,0,0.0001) 100%)
}

.dashed-bottom {
    border-bottom: 5px dashed white;
}

.light-dashed-bottom {
    border-bottom: 2px dashed #e6e6e6;
}

.intro-content {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.typewriter {
    animation: blink-caret .75s step-end infinite;
    border-right: .15em solid white;
    display: inline;

}

.homepage-card {
    height: calc(100vh - 6vh);
    width: calc(100vw  - 6vw);
    padding: 1vh 1vw;
    padding-top: 2vh;
    background-color: rgba(11,11,12,0.4);
    corner-radius: 10px;
    margin: 2vh 2vw;
    display: grid;
    grid-template-rows: auto 1fr;
    overflow-y: hidden;
}

.about-grid {
    display: grid;
    grid-template-columns: 65% 1fr;
    grid-template-rows: 1fr max-content;
    height: 100%;
    width: 100%;
}

.card-title {
    display: inline-block;
    margin: 10px;
    margin-right: auto;
    padding-right: 10px;

}

.about-description p {
    word-wrap: break-word;
    white-space: pre-wrap;
}

.hobbies {
    background-color: black;
    height: 100%;
    padding: 10px;
}

.page-header {
    text-align: center;
    padding: 50px;
    background: linear-gradient(rgba(11,11,12,1) 0%, rgba(11,11,12,0.9) 40%, rgba(0,0,0,0) 100%)
}

.post-list-title {
    text-align: left;
    font-size: 40px;
    margin: 0px;
}

.post-list-image-container {
    position: relative;
    width: 20%;
    padding-bottom: 20%;
    overflow: hidden;
    float: right;
    margin-left: auto;
}

.post-list-body-container {
    width: 80%;
    float: left;
    padding: 0px 20px;
}

.full-width {
    width: 100% !important;
}


.post-list-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
}

article a {
    text-decoration: none;
    display: flex;
    padding: 50px;
    height: 30vh;
    padding-bottom: 25px;
    overflow: hidden;
    background: linear-gradient(rgba(11,11,12,1) 0%, rgba(11,11,12,0.9) 50%, rgba(0,0,0,0) 100%);
}

article a:hover {
    background: linear-gradient(rgba(11,11,12,1) 0%, rgba(11,11,12,0.9) 50%, rgba(32,42,68,0.5) 100%);
    transition: 300ms linear;
}

.post {
    margin: 10px;
}

img {
    max-width: 100%;
    height: auto;
}

figure {
    border: 2px dashed #e6e6e6;
    padding: 2vw;
    margin: auto;
    max-width: 70%;
    margin-bottom: 20px;
    background: rgba(22, 22, 22, 0.9);
}

.figure-left {
    float: left;
    margin-right: 10px;
    max-width: 55%;
}

.figure-right {
    float: right;
    margin-left: 10px;
    max-width: 55%;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

@media only screen and (max-width: 768px) {
    .post-list-image-container {
        display: none;
    }

    .post-list-title{
        text-align: center;
    }

    .post-list-body-container {
        width: 100%;
        float: none;
        padding: 0px;
    }

    article a {
        padding: 0px;
        height: 100%;
        flex-direction: column;
        text-align: center;
    }

    figure {
        border: 2px dashed #e6e6e6;
        padding: 2vw;
        margin: auto;
        max-width: 100%;
        background: rgba(22, 22, 22, 0.9);
        margin-bottom: 20px;
    }
}

